# flight-tracker-py-web

./: .gitignore  LICENSE  Readme.md  __main__.py  build.sh  config.ini  main.py  pyproject.toml  requirements-pipreqs.txt  requirements-working.txt  requirements.txt
app/: app.py  flight-tracker.ui
classes/: __init__.py  boolean_config_parser.py  display_queue.py  preact_bridge.py  service.py  threaded_http_server.py  worker.py
flight_tracker_py_web.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
managers/: adsb.py  app_manager.py  flight_manager.py
models/: __init__.py  app_manager.py  config_manager.py  flight_manager.py  fr24_flight.py
preact/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
preact/src/: app.css  app.tsx  main.tsx  qwebchannel.d.ts
preact/src/bridge/: pythonBridge.ts
preact/src/hooks/: useConfigData.ts  useFlightData.ts  useInterval.ts
preact/src/store/: appSlice.ts  flightSlice.ts  index.ts
preact/src/types/: BackendFlightPayload.ts  BriefFlight.ts  FlightListRecord.ts  Fr24FlightDetail.ts  Position.tsx
preact/src/utilities/: calculateBearing.ts  calculateDistance.ts  earlyOrLate.ts
preact/src/views/: SplashScreen.tsx
preact/src/views/BottomRow/: index.tsx
preact/src/views/TopRow/: index.tsx
preact/src/views/utilities/: ArrowRight.tsx  FlightTime.tsx  NumberWithArrow.tsx  briefAirlineName.ts  calculateBearing.ts  calculateDistance.ts  formatSecondsToHM.ts  (+3 more)
services/: __init__.py  svc_get_flights.py
utilities/: __init__.py  airline.py  error.py  http_request.py  text_suppression_filter.py
(+24 files in other folders)
